fix spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,7 @@
 html {
   font-size: 16px;
   font-family: "Asap", sans-serif;
-  line-height: 1.2;
+  line-height: 1.5;
 }
 
 h1 {
@@ -25,6 +25,7 @@ h2 {
 h3 {
   font-size: 1.5rem;
 }
+
 
 header {
   position: fixed;
@@ -109,6 +110,7 @@ header .mobile {
 .banner-content p {
   font-size: 1.75rem;
   padding: 1.5rem 0;
+  line-height: 1.5;
 }
 
 .button {
@@ -153,6 +155,7 @@ header .mobile {
 
 .practice .quote {
   margin-bottom: 1.5rem;
+  line-height: 1.5;
 }
 
 main .mobile {
@@ -216,7 +219,7 @@ main .mobile {
 }
 
 .course {
-  margin: 2rem;
+  margin: 1rem;
   background-color: white;
   padding-bottom: 1.5rem;
   flex-basis: 30%;
